fix extra space created by social buttons

--- a/public/foundation/scss/app.scss
+++ b/public/foundation/scss/app.scss
@@ -407,6 +407,7 @@ a.button:hover{
 	top:0;
 	// right:0;
 	z-index: 5;
+	height:0;
 	.white.button{
 		border: 1px solid $light-gray;
 	}
